# tmpl

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README.md.erb  bootstrap  cmdline.c  cmdline.h  config.h  config.h.in  configure  configure.ac  log.c  log.h  tmpl.1  tmpl.c  tmpl.ggo  tmpl.ggo.in
man/: Makefile.am  Makefile.in  tmpl.1.in
src/: Makefile.am  Makefile.in  cmdline.c  cmdline.h  rstrcat.c  rstrcat.h  tmpl.c
